--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,7 +16,7 @@
             var userPassword = $("#userPassword").val();
             var userUnit = $("#userUnit").val();
             var userPhone = $("#userPhone").val();
-            var userCity = $("#userCity").val();
+            var userArea = $("#userArea").val();
             var reg=/^(13[0-9]|14[01456879]|15[0-3,5-9]|16[2567]|17[0-8]|18[0-9]|19[0-3,5-9])\d{8}$/;
             var judge = true;
             if (!reg.test(userPhone)){
@@ -35,15 +35,17 @@
                 alert("请填写密码");
                 judge = false;
             }else
-            if (userCity==""){
+            if (userArea==""){
                 alert("请选择地址");
                 judge = false;
             }else
-            if (userCity==null){
+            if (userArea==null){
                 alert("请选择地址");
                 judge = false;
             }
-
+            console.log("userArea:"+userArea)
+            var use=$("toAddForm").serialize();
+            console.log("user----------------->"+use)
             if (judge) {
                 var user = $("#toAddForm").serialize();
                 $.ajax({
@@ -77,7 +79,7 @@
             })
         }
         $scope.province=function () {
-            var provinceId=$scope.userCityss;
+            var provinceId=$scope.userProvince;
             $http({
                 url: "/Province/findCity",
                 method: "post",
@@ -91,15 +93,15 @@
 
 
             $scope.area=function () {
-                var provinceId=$scope.userCityss;
-                var cityId=$scope.userare;
+                var provinceId=$scope.userProvince;
+                var cityId=$scope.userCity;
 
                 $http({
                     url: "/Province/findCounty",
                     method: "post",
                     params: {"provinceId":provinceId,"cityId":cityId}
                 }).success(function (response) {
-                    $scope.userarea=response;
+                    $scope.userare=response;
                 })
 
             }
@@ -134,15 +136,15 @@
                         <input id="userUnit" name="userUnit"  placeholder="单位名称">
                     </div>
                     <div class="form_text_ipt">
-                        <select ng-model="userCityss"  type="text" style="width: 95px; height: 40px" ng-blur="province()">
+                        <select  ng-model="userProvince" name="userProvince"  type="text" style="width: 95px; height: 40px" ng-click="province()">
                             <option ng-repeat="ci in city"  ng-value="ci.id">{{ci.name}}</option></select>
 
-                        <select style="width: 95px; height: 40px" ng-blur="area()" ng-model="userare">
+                        <select style="width: 95px; height: 40px" ng-click="area()" name="userCity" ng-model="userCity">
                             <option ng-repeat="pr in provi"  ng-value="pr.id">{{pr.name}}</option>
                         </select >
 
-                        <select style="width: 100px; height: 40px" id="userCity" name="userCity">
-                            <option ng-repeat="re in userarea" ng-value="re.id">{{re.name}}</option>
+                        <select style="width: 100px; height: 40px" name="userArea" id="userArea">
+                            <option ng-repeat="re in userare" ng-value="re.id">{{re.name}}</option>
                         </select>
                     </div>
                     <input name="roleId" value="5" type="hidden">
